--- a/public/auth_ref/Welcome.html
+++ b/public/auth_ref/Welcome.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>@LabRes</title>
-    <link rel="stylesheet" href="welcome.css">
+    <link rel="stylesheet" href="/Welcome.css">
     <style> 
       @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
     </style>
@@ -15,15 +15,15 @@
     <div class="div2">
         <div class="video-wrap">
             <video class="bg-video" autoplay muted loop>
-                <source src="Welcome.mp4" type="video/mp4">
+                <source src="/Welcome.mp4" type="video/mp4">
             </video>
 
             <div class="overlay-box">
               <div class="overlay-text">
                 <h1>Lab Reservation Made Easy!</h1>
                 <div class="login-buttons">
-                  <button class="btn btn-outline-primary" onclick="window.location.href='/login'">Log In</button>
-                  <button class="btn btn-outline-primary" onclick="window.location.href='/register'">Sign Up</button>
+                  <button class="btn btn-outline-primary" onclick="window.location.href='/sign_in'">Sign In</button>
+                  <button class="btn btn-outline-primary" onclick="window.location.href='/sign_up'">Sign Up</button>
                 </div>
               </div>
             </div>
