--- a/public/auth_ref/sign_in.html
+++ b/public/auth_ref/sign_in.html
@@ -34,7 +34,7 @@
                 <br>
                 <button type="submit" class="btn btn-outline-success">Submit</button>
                 </form>
-                <p>Don't have an Account?  <button onclick="window.location.href='/register'" class="btn btn-link p-0 align-baseline">Click Here</button> to Sign up!</p>
+                <p>Don't have an Account?  <button onclick="window.location.href='/sign_up'" class="btn btn-link p-0 align-baseline">Click Here</button> to Sign up!</p>
             </div>
         </div>
 
