Removed role choices and fixed hashing baby

--- a/public/auth_ref/sign_up.html
+++ b/public/auth_ref/sign_up.html
@@ -32,15 +32,15 @@
             <input type="text" name="lname" placeholder="Enter Last Name" required>
           </div>
         </div>
-
-        <br>
+<!-- 
+        <br> Keeping this just in case -L
 
         <p><strong>Role:</strong></p>
         <input type="radio" id="Technician" name="role" value="TECHNICIAN" required>
         <label for="Technician">Technician</label>
 
         <input type="radio" id="Student" name="role" value="STUDENT" required>
-        <label for="Student">Student</label>
+        <label for="Student">Student</label> -->
 
         <br><br>
 
