--- a/public/auth_ref/sign_in.html
+++ b/public/auth_ref/sign_in.html
@@ -1,87 +1,91 @@
-
 <html>
-    <head>
-        <title>LABS Reservation Login</title>
-        <link rel="stylesheet" href="/auth_ref/MC1.css" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"  rel="stylesheet">
-        <style>
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-     body, button, input, textarea, select {
-    font-family: 'Inter' !important;
-  }
-</style>
-    </head>
-    <body>
-        <div class="miniheader">
-          
-            <h1>@LabRes</h1>
-          </div>
+<head>
+  <title>LABS Reservation Login</title>
+  <link rel="stylesheet" href="/auth_ref/MC1.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+    body, button, input, textarea, select {
+      font-family: 'Inter' !important;
+    }
+  </style>
+</head>
+<body>
+  <div class="miniheader">
+    <h1>@LabRes</h1>
+  </div>
 
-        <div class="container">
-            <div class="register">
-              <br><br>
-                <h1>Log In</h1><br>
-                <form id="loginForm" method="POST" action="/sign_in">
-                <h3>DLSU Email</h3><br>
-                <input type="email" name="DLSUemail" placeholder="DLSU Email"><br><br>
+  <div class="container">
+    <div class="register">
+      <br><br>
+      <h1>Log In</h1><br>
+      <form id="loginForm" method="POST" action="/sign_in">
+        <h3>DLSU Email</h3><br>
+        <input type="email" name="DLSUemail" placeholder="DLSU Email"><br><br>
 
-                <h3>Password</h3><br>
-                <input type="password" name="password" placeholder="Your Password">
-                <br>
-                <br>
-                <input type="checkbox" id="remember">
-                <label id="remember">Remember me</label><br>
-                <br>
-                <button type="submit" class="btn btn-outline-success">Submit</button>
-                </form>
-                <p>Don't have an Account?  <button onclick="window.location.href='/sign_up'" class="btn btn-link p-0 align-baseline">Click Here</button> to Sign up!</p>
-            </div>
-        </div>
+        <h3>Password</h3><br>
+        <input type="password" name="password" placeholder="Your Password">
+        <br>
+        <br>
+        <input type="checkbox" id="remember">
+        <label for="remember">Remember me</label><br>
+        <br>
+        <button type="submit" class="btn btn-outline-success">Submit</button>
+      </form>
+      <p>Don't have an Account?  
+        <button onclick="window.location.href='/sign_up'" class="btn btn-link p-0 align-baseline">Click Here</button> 
+        to Sign up!
+      </p>
+    </div>
+  </div>
 
-<script>
-  // === RESTORE FORM IF REMEMBERED ===
-  window.addEventListener("pageshow", () => {
-    const remembered = localStorage.getItem("rememberedUser");
-    if (!remembered) return;
+  <script>
+    // === RESTORE EMAIL AND PASSWORD IF REMEMBERED ===
+    window.addEventListener("pageshow", () => {
+      const remembered = localStorage.getItem("rememberedUser");
+      if (!remembered) return;
 
-    try {
-      const { email, password, expiresAt } = JSON.parse(remembered);
+      try {
+        const { email, password, expiresAt } = JSON.parse(remembered);
 
-      // If expired, clear and exit
-      if (new Date() > new Date(expiresAt)) {
+        // If expired, clear
+        if (new Date() > new Date(expiresAt)) {
+          localStorage.removeItem("rememberedUser");
+          return;
+        }
+
+        // Auto-fill both email and password
+        const emailInput = document.querySelector("input[name='DLSUemail']");
+        const passwordInput = document.querySelector("input[name='password']");
+
+        if (emailInput) emailInput.value = email;
+        if (passwordInput) password.value = password;
+
+        document.getElementById("remember").checked = true;
+      } catch (e) {
+        console.error("Error restoring remembered credentials:", e);
         localStorage.removeItem("rememberedUser");
-        return;
       }
+    });
 
-      // Auto-fill the form
-      document.querySelector("input[name='DLSUemail']").value = email;
-      document.querySelector("input[name='password']").value = password;
-      document.getElementById("remember").checked = true;
-    } catch (e) {
-      console.error("Error restoring remembered credentials:", e);
-      localStorage.removeItem("rememberedUser");
-    }
-  });
+    // === SAVE EMAIL AND PASSWORD ON SUBMIT IF "REMEMBER ME" IS CHECKED ===
+    const form = document.querySelector("#loginForm");
+    form.addEventListener("submit", function () {
+      const email = document.querySelector("input[name='DLSUemail']").value.trim();
+      const password = document.querySelector("input[name='password']").value.trim();
+      const remember = document.getElementById("remember").checked;
 
-  // === SAVE TO REMEMBERED USER ON SUBMIT ===
-  const form = document.querySelector("#loginForm");
-  form.addEventListener("submit", function () {
-    const email = document.querySelector("input[name='DLSUemail']").value.trim();
-    const password = document.querySelector("input[name='password']").value.trim();
-    const remember = document.getElementById("remember").checked;
-
-    if (remember) {
-      const expiresAt = new Date(Date.now() + 21 * 24 * 60 * 60 * 1000); // 3 weeks
-      localStorage.setItem("rememberedUser", JSON.stringify({
-        email,
-        password,
-        expiresAt: expiresAt.toISOString()
-      }));
-    } else {
-      localStorage.removeItem("rememberedUser");
-    }
-  });
-</script>
-
-    </body>
+      if (remember) {
+        const expiresAt = new Date(Date.now() + 21 * 24 * 60 * 60 * 1000); // 3 weeks
+        localStorage.setItem("rememberedUser", JSON.stringify({
+          email,
+          password,
+          expiresAt: expiresAt.toISOString()
+        }));
+      } else {
+        localStorage.removeItem("rememberedUser");
+      }
+    });
+  </script>
+</body>
 </html>
